test/conformance/chainsaw/mutate/policy/standard/existing/trigger-unchanged/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trigger-test-ns
