test/conformance/chainsaw/mutate/policy/standard/existing/trigger-unchanged/chainsaw-step-01-apply-1-3.yaml
apiVersion: v1
kind: Secret
metadata:
  name: secret-1
  namespace: trigger-test-ns
type: Opaque
data:
  key: dmFsdWU=
