test/conformance/chainsaw/mutate/policy/standard/existing/trigger-unchanged/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: dictionary-1
  namespace: trigger-test-ns
data:
  foo: bar
  trigger: update
