test/conformance/chainsaw/mutate/policy/standard/existing/trigger-unchanged/chainsaw-step-03-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: secret-1
  namespace: trigger-test-ns
  labels:
    mutated: "true"
type: Opaque
