test/conformance/chainsaw/mutate/policy/standard/existing/trigger-unchanged/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: trigger-unchanged
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mutate-existing-trigger-test
        - name: namespace
          value: trigger-test-ns
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - script:
        timeout: 15s
        content: sleep 10
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
    - assert:
        file: chainsaw-step-03-assert-1-2.yaml
